--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Probni barovi</title>
+    <title>AVD registar</title>
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i" rel="stylesheet">
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="index.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -52,7 +52,7 @@
                     </ul>
                 </div>  
                 <!-- Treći meni -->
-                <div class="meni">
+                <div class="meni meni3">
                     <div class="meni-header bg-secondary text-white d-flex align-items-center pl-4">
                         <div><i class="fas fa-sort-amount-down"></i> Grad Zagreb</div>
                     </div>
@@ -212,7 +212,7 @@
                             </div>
                         </div>
                     </div>
-                
+                    
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <img class="img-thumbnail" src="hr_flag.png"> <img class="img-thumbnail" src="eng_flag.png">
@@ -222,19 +222,25 @@
             </nav>
 
             <div id="box" class="alert alert-warning alert-dismissible fade show" role="alert">
-                <div class="d-flex justify-content-start flex-column flex-lg-row">
+                <div class="d-flex justify-content-between justify-content-xl-start align-items-center">
                     <ul class="list-unstyled text-dark">
-                        <li class="d-md-inline mr-lg-3"> 
+                        <li> 
                             <strong><i class="fa fa-info-circle" aria-hidden="true"></i> Automatski vanjski defibrilator </strong>
-                        </li>                     
+                        </li> 
+                        <li>                    
                             <strong>Adresa:</strong> Neka Ulica 7, 10000 Zagreb
-                        <li class="d-md-inline"> 
+                        </li>
+                        <li> 
                             <strong>Zemljopisna širina:</strong> 45.812900
                         </li>
-                        <li class="d-md-inline"> 
+                        <li> 
                             <strong>Zemljopisna dužina:</strong> 15.975291
                         </li>  
+                        
                     </ul>
+                                      
+                    <img class="img-thumbnail ml-xl-5 mb-3 mr-2" src="vanjski-def.jpg" style="width: 10vh; height: 10vh;">
+        
                     <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button> -->
