--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 .alert{
     display: none;
     transition: all 0.3s;
@@ -8,11 +7,18 @@
     border-radius: 0;
     padding-bottom: 0;
     background: rgba(255,  215,  114,  0.6);
-    /* color: white; */
+    font-size: 0.9rem;
 }
 
 .alert.on{
    width: calc(100% - 250px);
+}
+
+#box {
+    margin: 0;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    
 }
 
 .wrapper{
@@ -69,9 +75,17 @@
     margin-bottom: 15px;
 }
 
+.meni {
+   margin-bottom: 4vh !important;
+}
+
 .meni ul {
     width: 80%;
     margin: auto;
+}
+
+.meni3 li {
+    height: 1.6rem;
 }
 
 .navbar-toggler{
@@ -88,10 +102,10 @@
 }
 
 #logo {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 15vh;
+    max-height: 15vh;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .meni {
@@ -103,17 +117,7 @@
     border: none;
 }
 
-@media (max-width: 576px) {
-    #brand {
-        font-size: 1.3rem;
-    }
-}
-
 @media (max-width: 768px) {
-    #sidebar {
-        margin-left: 0;
-    }
-
     #content.sidebarOn {
         margin-right: -240px;
     }
@@ -122,19 +126,57 @@
         font-size: 1.6rem;
     }
 
-    #logo {
-        max-width: 40%;
-        max-height: 40%;
-        margin-top: 10px;
+    .alert.on{
+        width: 100%;
+     }
+}
+
+@media (max-width: 576px) {
+    #brand {
+        font-size: 1.4rem;
+    }
+
+    .alert {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 320px) {
+    #sidebar {
+        min-width: 190px;
+        max-width: 190px;
+    }
+
+    #sidebar.active {
+        margin-left: -185px;
+        transition: all 0.3s;
+    }
+
+    #content.sidebarOn {
+        margin-right: -185px;
+    }
+
+    #brand {
+        font-size: 1.4rem;
+    }
+
+    .navbar img {
+        height: 30px;
+        width: 30px;
+    }
+
+    html {
+        font-size: 14px;
+    }
+
+    .meni-header {
+        height: 30px;
+        margin: auto;
         margin-bottom: 10px;
     }
 
     .alert {
         font-size: 0.8rem;
     }
-
-    .alert.on{
-        width: 100%;
-     }
 }
-
+    
