make it better2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes"> -->
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>AVD registar</title>
@@ -265,6 +268,15 @@
     <!-- Moj JS -->
     <script type="text/javascript" src="karta.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDulnEDf6Xk063aGmC91t01C9u8RnI2Bts&callback=initMap&language=hr&region=HR" async defer></script>
+
+    <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
+<script>
+  (function () {
+    // initialize the test
+    var test = vhCheck();
+  }());
+</script> 
+
 </body>
 
 </html>
