--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,12 @@
     font-size: 0.9rem;
 }
 
+/* html, body {
+    
+    width: -webkit-calc(100% - 0px);
+    height: calc(100vh - var(--vh-offset, 0px));
+} */
+
 .alert.on{
    width: calc(100% - 250px);
 }
@@ -23,8 +29,8 @@
 
 .wrapper{
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: calc(100vh - var(--vh-offset, 0px));
     overflow: hidden;
 }
 
@@ -37,7 +43,7 @@
     box-shadow: 6px 0px 12px 0px rgba(0,0,0,0.61);
     min-width: 250px;
     max-width: 250px;
-    height: 100vh;
+    height: calc(100vh - var(--vh-offset, 0px));
 }
 /* LIJEVI DIO -------------------- */
 
@@ -56,7 +62,7 @@
 }
 
 #map {
-    height: 90%;
+    height: calc(90% - var(--vh-offset, 0px));
     width: 100%;
     margin-top: auto;
 }
