--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -97,7 +98,7 @@
         <div id="content">
                 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid justify-content-between">
+                <div class="container-fluid d-flex justify-content-between align-items-center">
                     <div class="d-flex align-items-center">                
                         <!-- Gumb za sidebar -->
                         <button class="btn btn-dark" type="button" id="sidebarCollapse" >
@@ -105,12 +106,12 @@
                         </button>
 
                         <a class="navbar-brand ml-3 ml-md-5" href="#">
-                            <h1 id="brand"><i class="fas fa-map-marker-alt"></i> <span>AVD</span><span class="d-none d-md-inline-block">registar</span></h1>
+                            <h1 id="brand"><i class="fas fa-map-marker-alt"></i> <span>AVD </span><span class="d-none d-md-inline-block">registar</span></h1>
                         </a>
 
                         <!-- Button trigger modal -->
-                        <button class="btn btn-light ml-md-5" type="button" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img id="navbarKarta" src="cro.png"> <span class="font-weight-bold d-none d-md-inline-block">Županije</span> <i class="fas fa-caret-down"></i>
+                        <button class="navbarContainer btn btn-light ml-md-5" data-toggle="modal" data-target="#exampleModalCenter">
+                            <img class="barSlike" src="cro.png"> <span class="font-weight-bold d-none d-md-inline-block">Županije</span> <i class="fas fa-caret-down"></i>
                         </button>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -215,12 +216,12 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <img class="img-thumbnail" src="hr_flag.png"> <img class="img-thumbnail" src="eng_flag.png">
-                        </li>
-                    </ul>
+
+                    <div class="zastave d-flex align-items-center">
+                        <img src="hr_flag.png">
+                        <img src="eng_flag.png">
+                    </div>
+                        
                 </div>
             </nav>
 
@@ -239,7 +240,6 @@
                         <li> 
                             <strong>Zemljopisna dužina:</strong> 15.975291
                         </li>  
-                        
                     </ul>
                                       
                     <img class="img-thumbnail ml-xl-5 mb-3 mr-2" src="vanjski-def.jpg" style="width: 10vh; height: 10vh;">
@@ -256,7 +256,7 @@
     </div>       
    
     <script type="text/javascript">
-        var podaci = <%- JSON.stringify(rezultat) %>;
+        var podaci = [{"id":1,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Adresa neka 1","vrsta":"fixni","prisutan":1,"sirina":45.815968,"duzina":15.985222},{"id":11,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Prilaz drugi 2","vrsta":"mobilni","prisutan":1,"sirina":45.822086,"duzina":15.973818},{"id":21,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Ulica 3","vrsta":"more","prisutan":1,"sirina":45.81345,"duzina":15.968174},{"id":31,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Iza ugla 4","vrsta":"fixni","prisutan":1,"sirina":45.792019,"duzina":15.972685},{"id":41,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Adresa neka 1","vrsta":"more","prisutan":1,"sirina":45.843933,"duzina":15.801654},{"id":51,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Adresa 450","vrsta":"mobilni","prisutan":1,"sirina":45.819298,"duzina":15.817897},{"id":61,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Ulica 3","vrsta":"more","prisutan":1,"sirina":45.796867,"duzina":15.881206},{"id":71,"zupanija":"Grad Zagreb","grad":"Zagreb","adresa":"Tamo gore 42","vrsta":"fixni","prisutan":1,"sirina":45.76392,"duzina":15.950362}];
     </script>
     
     <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -270,12 +270,12 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDulnEDf6Xk063aGmC91t01C9u8RnI2Bts&callback=initMap&language=hr&region=HR" async defer></script>
 
     <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
-<script>
-  (function () {
-    // initialize the test
-    var test = vhCheck();
-  }());
-</script> 
+    <script>
+        (function () {
+            // initialize the test
+            var test = vhCheck();
+        }());
+    </script> 
 
 </body>
 
