--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,11 @@
     border: none;
 }
 
+.list-group li:hover {
+    color: #17a2b8;
+    cursor: pointer;
+}
+
 @media (max-width: 768px) {
     #content.sidebarOn {
         margin-right: -240px;
