--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,11 +125,19 @@
                                     </div>
                                     <div class="modal-body">
                                         <ul class="list-group">
-                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                            <li id="hr" class="list-group-item d-flex justify-content-between align-items-center">
                                                 <strong>HR</strong>
                                                 <span class="badge badge-info badge-pill">268</span>
                                             </li>
-                                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                            <li id="gradzagreb" class="list-group-item d-flex justify-content-between align-items-center">
+                                                Grad Zagreb
+                                                <span class="badge badge-dark badge-pill">1</span>
+                                            </li>
+                                            <li id="splitskodalmatinska" class="list-group-item d-flex justify-content-between align-items-center">
+                                                Splitsko-dalmatinska
+                                                <span class="badge badge-dark badge-pill">2</span>
+                                            </li>
+                                            <li id="zagrebacka" class="list-group-item d-flex justify-content-between align-items-center">
                                                 Zagrebačka
                                                 <span class="badge badge-dark badge-pill">2</span>
                                             </li>
@@ -190,10 +198,6 @@
                                                 <span class="badge badge-dark badge-pill">14</span>
                                             </li>
                                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                Splitsko-dalmatinska
-                                                <span class="badge badge-dark badge-pill">2</span>
-                                            </li>
-                                            <li class="list-group-item d-flex justify-content-between align-items-center">
                                                 Istarska
                                                 <span class="badge badge-dark badge-pill">1</span>
                                             </li>    
@@ -205,10 +209,7 @@
                                                 Međimurska
                                                 <span class="badge badge-dark badge-pill">2</span>
                                             </li>
-                                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                Grad Zagreb
-                                                <span class="badge badge-dark badge-pill">1</span>
-                                            </li>
+                                            
                                         </ul>
                                     </div>
                                     
@@ -260,13 +261,15 @@
     </script>
     
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <!-- Moj JS -->
     <script type="text/javascript" src="karta.js"></script>
+    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDulnEDf6Xk063aGmC91t01C9u8RnI2Bts&callback=initMap&language=hr&region=HR" async defer></script>
 
     <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
