--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>AVD registar</title>
+    <title>ALFATEC Group - web test</title>
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i" rel="stylesheet">
@@ -32,7 +32,7 @@
         <!-- Sidebar -->
         <nav id="sidebar" class="active d-flex flex-column navbar-dark bg-dark justify-content-between align-items-center">
             <!-- Sidebar Header -->
-            <img id="logo" src="logo2.png">
+            <img id="logo" src="alfatec.png">
 
             <div>            
                <!-- Prvi meni -->
@@ -49,10 +49,10 @@
                 <!-- Drugi meni -->
                 <div class="meni">
                     <div class="meni-header bg-info text-white d-flex align-items-center pl-4">
-                        <div><i class="fas fa-question-circle"></i> Podaci o uređaju</div>
+                        <div><i class="fas fa-question-circle"></i> Info</div>
                     </div>
                     <ul class="list-unstyled text-secondary">
-                        <li><h6>Odaberite uređaj kako bi ste dobili uvid u detaljne informacije</h6></li>
+                        <li><h6>Google API licenca istekla, karta ne radi. Pozicioniranje radi samo na splitsko-dalmatinskoj</h6></li>
                     </ul>
                 </div>  
                 <!-- Treći meni -->
@@ -63,21 +63,21 @@
                     <ul class="list-unstyled text-secondary">
                         <!-- <li><h5>Broj uređaja</h5></li> -->
                         <li class="d-flex justify-content-between align-items-center">
-                            <h6>Fiksni</h6>
+                            <h6>Qualys</h6>
                             <div class="d-flex justify-content-between align-items-center w-50">
                                 <h6 class="ml-4"><i class="fas fa-angle-double-right"></i> 3</h6>
                                 <h5 class="prekidac"><i class="fas fa-toggle-on" onclick="togglePrikaz('fixni');"></i></h5>
                             </div>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <h6>Mobilni</h6>
+                            <h6>nCipher</h6>
                             <div class="d-flex justify-content-between align-items-center w-50">
                                 <h6 class="ml-4"><i class="fas fa-angle-double-right"></i> 3</h6>
                                 <h5 class="prekidac"><i class="fas fa-toggle-on" onclick="togglePrikaz('mobilni');"></i></h5>
                             </div>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <h6>Na moru</h6>
+                            <h6>NeuraLegion</h6>
                             <div class="d-flex justify-content-between align-items-center w-50">
                                 <h6 class="ml-4"><i class="fas fa-angle-double-right"></i> 3</h6>
                                 <h5 class="prekidac"><i class="fas fa-toggle-on" onclick="togglePrikaz('more');"></i></h5>
@@ -106,7 +106,7 @@
                         </button>
 
                         <a class="navbar-brand ml-3 ml-md-5" href="#">
-                            <h1 id="brand"><i class="fas fa-map-marker-alt"></i> <span>AVD </span><span class="d-none d-md-inline-block">registar</span></h1>
+                            <h1 id="brand"><i class="fas fa-map-marker-alt"></i> <span>ALFATEC Group </span><span class="d-none d-md-inline-block">- web test</span></h1>
                         </a>
 
                         <!-- Button trigger modal -->
@@ -230,7 +230,7 @@
                 <div class="d-flex justify-content-between justify-content-xl-start align-items-center">
                     <ul class="list-unstyled text-dark">
                         <li> 
-                            <strong><i class="fa fa-info-circle" aria-hidden="true"></i> Automatski vanjski defibrilator </strong>
+                            <strong><i class="fa fa-info-circle" aria-hidden="true"></i> Neka lokacija </strong>
                         </li> 
                         <li>                    
                             <strong>Adresa:</strong> Neka Ulica 7, 10000 Zagreb
@@ -270,7 +270,8 @@
     <script type="text/javascript" src="karta.js"></script>
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDulnEDf6Xk063aGmC91t01C9u8RnI2Bts&callback=initMap&language=hr&region=HR" async defer></script>
+    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgNgZKB-Dd0Voyc_Ed8Fpsx4cZ5gBVz34&callback=initMap&language=hr&region=HR" async defer></script>
 
     <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
     <script>
